--- a/index.html
+++ b/index.html
@@ -350,7 +350,9 @@
             border-radius: 8px;
             padding: 1rem;
             margin: .8rem 0;
-            text-align: center
+            text-align: center;
+            overflow-x: auto;
+            max-width: 100%;
         }
 
         .note-box {
@@ -626,7 +628,7 @@
         <div class="header">
             <h1>📊 زمان‌سنجی مونتاژ سه راهی برق صنعتی</h1>
             <p>Time Study Dashboard - Industrial Electrical Socket Assembly</p>
-            <div class="badge"></div>
+            
         </div>
 
         <div class="project-info">
