--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="fa" dir="rtl">
 
@@ -620,6 +621,37 @@
                 height: 500px;
             }
         }
+
+        .analysis-box {
+            background: #ebf8ff;
+            border-right: 4px solid #5a67d8;
+            padding: 1.2rem;
+            border-radius: 8px;
+            margin-top: 1.5rem;
+            font-size: 0.95rem;
+            line-height: 1.8;
+            color: #2d3748;
+        }
+
+        .analysis-box h4 {
+            color: #434190;
+            margin-bottom: 0.8rem;
+            font-size: 1.1rem;
+            font-weight: 700;
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+        }
+
+        .analysis-box ul {
+            list-style-type: disc;
+            padding-right: 1.5rem;
+            margin-top: 0.5rem;
+        }
+
+        .analysis-box li {
+            margin-bottom: 0.4rem;
+        }
     </style>
 </head>
 
@@ -627,10 +659,10 @@
     <div class="container">
         <div class="header">
             <h1>📊 زمان‌سنجی مونتاژ سه راهی برق صنعتی</h1>
-            <p>Time Study Dashboard - Industrial Electrical Socket Assembly</p>
+            <p>Time Study- Industrial Electrical Socket Assembly</p>
         </div>
 
-        <div class="project-info">
+        <div class="project-info" id="project-header">
             <div class="info-item"><span>نام محصول:</span> مونتاژ سه راهی برق</div>
             <div class="info-item"><span>نام بخش:</span>خط مونتاژ</div>
             <div class="info-item"><span>نام ایستگاه:</span>ایستگاه ۴</div>
@@ -709,6 +741,32 @@
                         <div class="value">C (Slack=1)</div>
                     </div>
                 </div>
+                <div class="analysis-box">
+                    <h4>🔍 تحلیل مسیر بحرانی و گلوگاه‌ها (Critical Path Analysis)</h4>
+                    <ul>
+                        <li><strong>چرا بحرانی؟</strong> فعالیت‌های A, B, D, E, F دارای <strong>شناوری صفر (Zero
+                                Slack)</strong> هستند. این یعنی هرگونه تأخیر در این فعالیت‌ها، مستقیماً زمان تحویل کل
+                            پروژه را به تعویق می‌اندازد.</li>
+                        <li><strong>چرا غیربحرانی؟</strong> فعالیت C دارای ۱ ثانیه شناوری است. یعنی اگر این فعالیت تا ۱
+                            ثانیه هم تأخیر داشته باشد، تأثیری روی زمان کل نخواهد داشت.</li>
+                        <li><strong>نتیجه:</strong> تمرکز مدیریتی برای کاهش زمان سیکل باید فقط روی مسیر A-B-D-E-F باشد.
+                        </li>
+                    </ul>
+                </div>
+                <div class="analysis-box">
+                    <h4>⛓️ تحلیل گلوگاه (Bottleneck Analysis)</h4>
+                    <ul>
+                        <li><strong>تعریف گلوگاه در این پروژه:</strong> گلوگاه به عنصری گفته می‌شود که بیشترین سهم را در زمان سیکل دارد و بهبود آن، مستقیماً خروجی خط را افزایش می‌دهد.</li>
+                        <li><strong>گلوگاه اصلی سیکل:</strong> فعالیت <b>D</b> (پیچ‌گوشتی برقی) با مدت <b>۶ ثانیه</b> طولانی‌ترین عنصر در مسیر بحرانی است (Slack=0)، بنابراین هر کاهش در زمان آن مستقیماً زمان کل پروژه را کاهش می‌دهد.</li>
+                        <li><strong>گلوگاه‌های نزدیک:</strong> فعالیت <b>B</b> (جاگذاری ترمینال) با <b>۵ ثانیه</b> نیز روی مسیر بحرانی است و پس از D بیشترین اثر را روی خروجی دارد.</li>
+                        <li><strong>فرصت بهبود بدون اثر مستقیم روی خروجی:</strong> فعالیت <b>C</b> با <b>۱ ثانیه شناوری</b> (Slack=1) گلوگاه نیست؛ بهبود آن تا زمانی که مسیر بحرانی تغییر نکند، خروجی خط را افزایش نمی‌دهد.</li>
+                        <li><strong>پیشنهادهای عملی برای کاهش گلوگاه D:</strong> بهبود ابزار (تنظیم گشتاور/سرعت پیچ‌گوشتی، نگهداری و تعویض سری)، پیش‌چینش پیچ‌ها، طراحی جیگ/فیکسچر برای کاهش زمان هم‌راستاسازی، و در صورت امکان <span dir="ltr">parallelization</span> (تقسیم عملیات پیچ‌کاری بین دو ابزار/اپراتور) برای حذف انتظار.</li>
+                    </ul>
+                    <p style="margin-top:0.6rem">
+                        <b>جمع‌بندی:</b> اولویت بهبود باید از نظر اثرگذاری به ترتیب روی <b>D</b> سپس <b>B</b> و بعد سایر فعالیت‌های مسیر بحرانی باشد.
+                    </p>
+                </div>
+
                 <div style="position: relative;">
                     <div id="network-container"></div>
                     <div class="activity-card" id="activityCard"></div>
@@ -852,6 +910,13 @@
                 <div class="formula-box">$$N = \left( \frac{40 \sqrt{N' \sum X^2 - (\sum X)^2}}{\sum X} \right)^2$$
                 </div>
 
+                <div class="analysis-box">
+                    <h4>📈 تحلیل آماری (Statistical Reliability)</h4>
+                    <p>حجم نمونه (N=30) بر اساس پراکندگی داده‌های اولیه و با در نظر گرفتن سطح اطمینان ۹۵٪ (Confidence
+                        Level) و دقت ۵٪ محاسبه شده است. این امر تضمین می‌کند که میانگین به‌دست‌آمده با احتمال ۹۵٪ در
+                        بازه واقعی جامعه آماری قرار دارد و نتایج برای تصمیم‌گیری مهندسی قابل استناد هستند.</p>
+                </div>
+
                 <h4 style="margin: 1rem 0; color: var(--primary);">📋 مشاهدات اولیه <span dir="ltr">(Pilot Data)</span>
                 </h4>
                 <div class="table-container" style="max-height: 200px; overflow-y: auto; margin-bottom: 1.5rem;">
@@ -941,6 +1006,15 @@
                     1 + 0.08 + 0.05 + 0.00 + 0.01 = <strong>1.14 → (114%)</strong>
                 </p>
             </div>
+            <div class="analysis-box" style="margin-top: 1rem;">
+                <h4>⭐ تحلیل عملکرد (Performance Rating)</h4>
+                <p>ضریب ۱۱۴٪ نشان می‌دهد که اپراتور فعلی ۱۴٪ سریع‌تر و ماهرتر از سطح نرمال جامعه کارگری عمل می‌کند. این
+                    افزایش کارایی عمدتاً ناشی از <strong>مهارت بالا (B2)</strong> و <strong>تلاش خوب (C1)</strong>
+                    اپراتور
+                    است. در زمان‌بندی تولید، این ضریب برای نرمال‌سازی زمان‌ها ضروری است تا برنامه‌ریزی مستقل از فرد
+                    انجام
+                    شود.</p>
+            </div>
         </div>
         <div class="table-container">
             <table>
@@ -985,7 +1059,8 @@
                 </tbody>
             </table>
         </div>
-    </div>
+        <div class="table-container">
+        </div>
     </div>
 
     <div id="timestudy" class="section">
@@ -993,6 +1068,13 @@
         <div class="card">
             <h2 class="section-title"><span>⏱️</span> برگه زمان‌سنجی</h2>
             <div class="formula-box">$$NT = OT \times \frac{Rating}{100}$$</div>
+            <div class="analysis-box">
+                <h4>💡 تحلیل متدولوژی (Methodology)</h4>
+                <p>در این مطالعه از روش <strong>زمان‌سنجی پیوسته (Continuous Timing)</strong> استفاده شده است. این روش
+                    با حذف خطاهای ناشی از توقف و شروع مجدد کرونومتر (Stop-Watch)، پیوستگی فرآیند را حفظ کرده و تمامی
+                    اجزای کاری و غیرکاری سیکل را پوشش می‌دهد. تفکیک فرآیند به ۶ عنصر کاری مستقل، امکان ردیابی دقیق
+                    گلوگاه‌ها را فراهم کرده است.</p>
+            </div>
             <div class="table-container">
                 <table>
                     <thead>
@@ -1136,6 +1218,18 @@
         <div class="card">
             <h2 class="section-title"><span>🎯</span> نتایج نهایی</h2>
             <div class="formula-box">$$ST = NT \times \left(1 + \frac{Allowance}{100}\right)$$</div>
+            <div class="analysis-box">
+                <h4>📊 تحلیل حساسیت و کاربرد مدیریتی (Sensitivity Analysis)</h4>
+                <ul>
+                    <li><strong>اثر بهبود:</strong> اگر زمان فعالیت‌های بحرانی (مثل D: پیچ‌گوشتی) تنها ۱۰٪ کاهش یابد،
+                        نرخ تولید ساعتی مستقیماً افزایش می‌یابد. اما بهبود در فعالیت C هیچ تأثیری بر خروجی خط نخواهد
+                        داشت.</li>
+                    <li><strong>تفاوت جنسیتی:</strong> تفاوت زمان استاندارد بین زن و مرد صرفاً ناشی از ضرایب تساهل
+                        فیزیولوژیکی (استاندارد ILO) است و ربطی به مهارت اپراتور ندارد.</li>
+                    <li><strong>کاربرد:</strong> زمان استاندارد محاسبه شده (۳۱.۵۳ ثانیه) باید مبنای سیستم پرداخت کارانه
+                        و ظرفیت‌سنجی خط تولید قرار گیرد.</li>
+                </ul>
+            </div>
             <div class="result-grid">
                 <div class="result-card">
                     <h4>👨 اپراتور مرد</h4>
@@ -1167,7 +1261,19 @@
                     <li>زمان استاندارد <span dir="ltr">(ST)</span> زن: <b>32.09 ثانیه</b></li>
                     <li>مسیر بحرانی: <b>A→B→D→E→F</b> (21 ثانیه)</li>
                 </ul>
+            
+            <div class="analysis-box" style="margin-top:1.5rem">
+                <h4>✅ نتیجه‌گیری نهایی</h4>
+                <p>
+                    در این پروژه با استفاده از زمان‌سنجی پیوسته، سیستم امتیازدهی وستینگهاوس و اعمال ضرایب تساهل،
+                    زمان نرمال و زمان استاندارد فرآیند مونتاژ سه‌راهی برق با دقت مهندسی محاسبه شد.
+                    نتایج به‌دست‌آمده نشان داد که مسیر بحرانی و گلوگاه فرآیند نقش تعیین‌کننده‌ای در ظرفیت تولید دارند
+                    و تمرکز بهبود باید بر فعالیت‌های بحرانی باشد.
+                    زمان استاندارد محاسبه‌شده می‌تواند به‌عنوان مبنای برنامه‌ریزی تولید،
+                    ظرفیت‌سنجی خط و سیستم‌های پرداخت مبتنی بر عملکرد مورد استفاده قرار گیرد.
+                </p>
             </div>
+</div>
         </div>
     </div>
     </div>
@@ -1187,6 +1293,15 @@
         function showSection(id) {
             document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
             document.getElementById(id).classList.add('active');
+
+            // Logic to toggle Project Information Header visibility
+            const projectHeader = document.getElementById('project-header');
+            if (id === 'dashboard') {
+                projectHeader.style.display = 'grid'; // Restore original display
+            } else {
+                projectHeader.style.display = 'none'; // Hide on other pages
+            }
+
             window.scrollTo({ top: 0, behavior: 'smooth' });
             if (id === 'cpm') setTimeout(initNetwork, 100);
             if (id === 'gantt') setTimeout(initGantt, 100);
